@@ -41,6 +41,7 @@
 	NX-1431 ("Don't Fragment" option for ping sub-agent)
 	NX-1433 (LDAP timeout blocks internal user database)
 	NX-1434 (Return from function from within foreach loop in NXSL can cause unexpected runtime error)
+	NX-1442 (Generic device driver cannot read interface list if device does not support ifNumber MIB object)
 
 
 *
